--- a/SportsTrader.html
+++ b/SportsTrader.html
@@ -24,8 +24,8 @@
 		<div>
 			<h3 class="picks">Today's Bets 2/2/2023</h3>
 				<div class="picks-grid">
-					<img class="picks-image1" src="eeg2.jpg" />
-					<img class="picks-image2" src="Turen.jpg" />
+					<img class="picks-image1" src="project-1.jpg" />
+					<img class="picks-image2" src="project-2.jpg" />
 				</div>
 		</div>
 
