--- a/SportsTrader.html
+++ b/SportsTrader.html
@@ -25,7 +25,7 @@
 			<h3 class="picks">Today's Bets 2/2/2023</h3>
 				<div class="picks-grid">
 					<img class="picks-image1" src="eeg2.jpg" />
-					<img class="picks-image2" src="Tarun.jpg" />
+					<img class="picks-image2" src="Turen.jpg" />
 				</div>
 		</div>
 
